# vprikol

./: .gitignore  README.md  pyproject.toml
.github/workflows/: pypi-publish.yml
vprikol/: __init__.py  api.py  backend.py  main.py  model.py  models.py
vprikol/models/: __init__.py  ai.py  backend.py  base.py  fraction.py  host_stats.py  internal.py  items.py  player.py  server.py  token.py
