[tool.poetry]
name = "vprikol"
version = "1.14"
description = ""
authors = ["evans <szx@bk.ru>"]
readme = "README.md"
packages = [{ include = "vprikol" }]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=1.10.7,<3"
aiohttp = "^3.8.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"