[tool.poetry]
name = "vprikol"
version = "6.1.0"
description = ""
authors = ["whynotban <dev@szx.su>"]
readme = "README.md"
packages = [{ include = "vprikol" }]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = ">=1.10.7,<3"
aiohttp = "^3.8.4"
orjson = "^3.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"